--- a/flask_back/templates/contato.html
+++ b/flask_back/templates/contato.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contatos</title>
+    <link rel="stylesheel" href="estilo/contato.css">
 </head>
 <body>
-    Email: holandsouza@gmail.com<br>
-    Telefone: (89)994542743
+    <div class="contato">
+        Email: holandsouza@gmail.com<br>
+        Telefone: (89)994542743
+    </div>
 </body>
 </html>
