--- a/flask_back/templates/contato.html
+++ b/flask_back/templates/contato.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<html lang="Pt-br">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contatos</title>
-    <link rel="stylesheel" href="estilo/contato.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     <div class="contato">
-        Email: holandsouza@gmail.com<br>
-        Telefone: (89)994542743
+        <div class="img">
+            <img src="{{ url_for('static', filename='imagens/rosto.png') }}"/>
+        </div>
+        <div class="info">
+            Email: holandsouza@gmail.com<br>
+            Telefone: (89)994542743
+        </div>
+        
     </div>
 </body>
 </html>
