--- a/flask_back/static/css/contato.css
+++ b/flask_back/static/css/contato.css
@@ -11,11 +11,24 @@
 body{
     width: 80%;
     margin: auto;
+
 }
 .contato{
+    margin-top: 100px;
     display: flex;
-    flex-direction: row;
+    background-color: aqua;
+    align-items: center;
+    justify-content: center;
+}
+#card{
+    margin: 25px;
+    border: solid 1px;
 }
 .img{
-    size: 0.5px;
+    background-color: black;
+    scale: 0.5;
+    border-radius: 50%;
+}
+#img{
+    object-fit: fill;
 }
